--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -92,7 +92,7 @@
       <x>10</x>
       <y>150</y>
       <width>381</width>
-      <height>171</height>
+      <height>161</height>
      </rect>
     </property>
     <property name="title">
@@ -131,6 +131,19 @@
       <string>Output format</string>
      </property>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="runCommand">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>320</y>
+      <width>381</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Convert Video</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
