--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -102,7 +102,7 @@
      <property name="geometry">
       <rect>
        <x>110</x>
-       <y>30</y>
+       <y>70</y>
        <width>111</width>
        <height>26</height>
       </rect>
@@ -118,17 +118,40 @@
       </property>
      </item>
     </widget>
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="formatLabel">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>30</y>
+       <y>70</y>
        <width>91</width>
        <height>21</height>
       </rect>
      </property>
      <property name="text">
       <string>Output format</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="nameInput">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>30</y>
+       <width>261</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="nameLabel">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>71</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>File Name</string>
      </property>
     </widget>
    </widget>
