--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -154,6 +154,59 @@
       <string>File Name</string>
      </property>
     </widget>
+    <widget class="QLabel" name="qualityLabel">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>110</y>
+       <width>51</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Quality</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="qualitySelection">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>110</y>
+       <width>111</width>
+       <height>26</height>
+      </rect>
+     </property>
+     <item>
+      <property name="text">
+       <string>No Change</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Highest</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>High</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Medium</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Low</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Lowest</string>
+      </property>
+     </item>
+    </widget>
    </widget>
    <widget class="QPushButton" name="runCommand">
     <property name="geometry">
